# UAV

./: .gitignore  README.md
autonomous_flight/: CMakeLists.txt  package.xml
autonomous_flight/cfg/mpc_navigation/: flight_base.yaml
autonomous_flight/include/autonomous_flight/: mpcNavigation.cpp  mpcNavigation.h
autonomous_flight/launch/: intent_mpc_demo_fast_visual.launch  intent_mpc_demo_fixed_margin.launch  intent_mpc_demo_stage6.launch  intent_mpc_demo_uncertainty.launch
docker/: Dockerfile.noetic-stage0
docs/project_management/: github_workflow.md
docs/stage0/: Intent_MPC_stage0_report.md
docs/stage1/: README.md  initial_dataflow_map.md  insertion_point_design.md  stage1_execution_prompt.md  stage1_final_report.md
docs/stage2/: README.md  stage2_execution_prompt.md  stage2_final_report.md  stage2_logging_design.md
docs/stage3/: README.md  stage3_design.md  stage3_execution_prompt.md  stage3_final_report.md
docs/stage4/: README.md  stage4_design.md  stage4_execution_prompt.md  stage4_final_report.md
docs/stage5/: README.md  stage5_design.md  stage5_execution_prompt.md  stage5_final_report.md
docs/stage6/: README.md  stage6_execution_prompt.md  stage6_experiment_design.md  stage6_final_report.md
dynamic_predictor/include/dynamic_predictor/: dynamicPredictor.cpp  dynamicPredictor.h
experiment_tools/: CMakeLists.txt  package.xml
experiment_tools/config/: stage2_default.yaml  stage6_matrix.yaml
experiment_tools/launch/: record_baseline.launch  record_stage6.launch
experiment_tools/scripts/: analyze_stage6_results.py  experiment_metric_recorder.py  generate_stage6_manifest.py  plot_metrics.py  run_stage6_batch.py  summarize_runs.py
multimodal_uncertainty/: CMakeLists.txt  package.xml
multimodal_uncertainty/config/: stage4_default.yaml
multimodal_uncertainty/launch/: run_stage4_pipeline.launch  run_uncertainty.launch
multimodal_uncertainty/msg/: UncertaintyObstacle.msg  UncertaintyObstacleArray.msg
multimodal_uncertainty/scripts/: uncertainty_obstacle_node.py
perception_degradation/: CMakeLists.txt  package.xml
perception_degradation/config/: stage3_default.yaml
perception_degradation/launch/: run_degradation.launch  run_degradation_with_recorder.launch
perception_degradation/msg/: DegradedObstacle.msg  DegradedObstacleArray.msg
perception_degradation/scripts/: perception_degradation_node.py
remote_control/launch/: mpc_navigation_fast_rviz.launch
remote_control/rviz/: mpc_navigation_fast.rviz
tracking_controller/include/tracking_controller/: trackingController.cpp
trajectory_planner/include/trajectory_planner/: mpcPlanner.cpp
uav_simulator/launch/: start_stage6.launch
uav_simulator/src/: quadcopterPlugin.cpp
